<resources>
    <string name="app_name">Lawn Care App</string>
    <string name="employees">Employees</string>
    <string name="sign_out">Sign Out</string>
    search_title
    <string name="search_title">Search for Customer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="id">ID</string>
    <string name="coursename">courseName</string>
    <string name="courseCode">courseCode</string>
    <string name="startAt">startAt</string>
    <string name="endAt">endAt</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="weekly_price">Weekly Price</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="street_address">Street Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="customer_id">Customer ID</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="weeklyprice">Weekly Price:</string>
    <string name="phonenumberTxt">Phone #:</string>
    <string name="idText">ID:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="address">Address:</string>
    <string name="phone_numberText">Phone Number:</string>
    <string name="weekly_priceText">Weekly Price:</string>
    <string name="state_city">City and State:</string>
    <string name="pick_date_mowed">Pick Date Mowed</string>
    <string name="selectDate">Select Date</string>
    <string name="click_here">Click Here</string>
    <string name="select_date_mowed">Select Date Mowed:</string>
    <string name="enter_amount_charged_here">Enter Amount Charged Here</string>
    <string name="select_date_paid">Select Date Paid:</string>
    <string name="total_owed">Total Owed:</string>
    <string name="detailed_invoice">Detailed Invoice</string>
    <string name="mowing_charges">Mowing Charges</string>
    <string name="accounts_receivable">Accounts Receivable</string>
    <string name="no_acccounts_rec">No Accounts Receivable</string>
    <string name="payments">Payments</string>
    <string name="no_invoices">No Invoices to Show</string>
    <string name="detailed_invoices">Detailed Invoices</string>
    <string name="detailed_customer_payments">Detailed Customer Payments</string>
    <string name="check">Check</string>
    <string name="cash">Cash</string>
    <string name="cash_or_check">Cash or Check:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="logout">Logout</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="mowing_image">Mowing Image</string>
    <string name="no_payments">No Payments</string>
    <string name="new_customer">New Customer</string>
    <string name="enter_payment_amount_here">Enter Payment Amount Here</string>
    <string name="email_address">Email Address</string>
    <string name="new_employee">New Employee</string>
    <string name="title_activity_employee">EmployeeActivity</string>
</resources>
