<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/select_date_paid"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tvDate"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:background="@drawable/backgroud_greenish_square_textview"
                android:text="@string/click_here"
                android:layout_marginEnd="40dp"
                />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioCashOrCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:checked="true"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/radioCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:buttonTint="@color/colorPrimary"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:inputType="number"
                android:hint="@string/enter_payment_amount_here"
                android:backgroundTint="@color/colorPrimary"/>


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>