<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:text="@string/select_date_mowed"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="40dp"
                android:id="@+id/tvDate"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:background="@drawable/backgroud_greenish_square_textview"
                android:text="@string/click_here"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tvMowingCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:inputType="number"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/enter_amount_charged_here"/>


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>